<?xml version="1.0"?>
<package format="2">
    <name>zeabus_vision</name>
    <version>0.0.0</version>
    <description>The zeabus_vision package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="phitchawat.lu@ku.th">Phitchawat Lukkanathiti</maintainer>
    <maintainer email="korrawit.c@ku.th">Korrawit Chaikangwan</maintainer>
    <maintainer email="Natthaphat.wa@ku.th">Natthaphat Wattanachansit</maintainer>
    <maintainer email="supakit.kr@gmail.com">Supakit Kriangkhajorn</maintainer>


    <license>MIT</license>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <build_depend>nav_msgs</build_depend>
    <exec_depend>nav_msgs</exec_depend>

    <build_depend>OpenCV</build_depend>
    <exec_depend>OpenCV</exec_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>

</package>
